--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "vue-disqus": "^4.0.1"
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^2.0.0",
